nobase_dist_man3_MANS = cbg_fprintf.3    \
            cfgbg_printf.3   \
            scbg_fprintf.3   \
            scfgbg_printf.3  \
            s_fprintf.3      \
            cbg_printf.3     \
            cfg_fprintf.3    \
            scbg_printf.3    \
            scfg_fprintf.3   \
            s_printf.3       \
            cfgbg_fprintf.3  \
            cfg_printf.3     \
            scfgbg_fprintf.3 \
            scfg_printf.3
           
EXTRA_DIST = cbg_fprintf.3    \
            cfgbg_printf.3   \
            scbg_fprintf.3   \
            scfgbg_printf.3  \
            s_fprintf.3      \
            cbg_printf.3     \
            cfg_fprintf.3    \
            scbg_printf.3    \
            scfg_fprintf.3   \
            s_printf.3       \
            cfgbg_fprintf.3  \
            cfg_printf.3     \
            scfgbg_fprintf.3 \
            scfg_printf.3
