AM_MAKEINFOFLAGS = --no-split
AM_MAKEINFOHTMLFLAGS = --no-headers --no-split

info_TEXINFOS = libaescprintf.texi


#install-data-hook:
#	- ${INSTALL_DATA} ./libaescprintf.texi "$(DESTDIR)${infodir}"
#	- if `test -x $(INSTALL_INFO)` ; then $(INSTALL_INFO) --info-dir="$(DESTDIR)$(infodir)" "$(DESTDIR)$(infodir)/libaescprintf.texi" ; fi

#uninstall-hook:
#	- if `test -f "$(DESTDIR)/${infodir}/libaescprintf.texi"` ; then $(RM) -f "$(DESTDIR)/${infodir}/libaescprintf.texi" ; fi
